# SnapATAC2

./: .buildinfo  .gitattributes  .gitignore  CODE_OF_CONDUCT.md  Cargo.toml  ChangeLog.md  LICENSE  README.md  api.html  changelog.html  develop.html  genindex.html  index.html  install.html  objects.inv  py-modindex.html  references.html  search.html  searchindex.js
.doctrees/: api.doctree  changelog.doctree  environment.pickle  index.doctree  install.doctree  references.doctree
.doctrees/_autosummary/: snapatac2.create_dataset.doctree  snapatac2.ex.export_bed.doctree  snapatac2.pl.scrublet.doctree  snapatac2.pl.spectral_eigenvalues.doctree  snapatac2.pl.tsse.doctree  snapatac2.pl.umap.doctree  snapatac2.pp.call_doublets.doctree  snapatac2.pp.filter_cells.doctree  snapatac2.pp.harmony.doctree  snapatac2.pp.import_data.doctree  snapatac2.pp.knn.doctree  snapatac2.pp.make_gene_matrix.doctree  snapatac2.pp.make_peak_matrix.doctree  snapatac2.pp.make_tile_matrix.doctree  snapatac2.pp.mnc_correct.doctree  snapatac2.pp.scrublet.doctree  (+13 more)
_autosummary/: snapatac2.create_dataset.html  snapatac2.ex.export_bed.html  snapatac2.pl.scrublet.html  snapatac2.pl.spectral_eigenvalues.html  snapatac2.pl.tsse.html  snapatac2.pl.umap.html  snapatac2.pp.call_doublets.html  snapatac2.pp.filter_cells.html  snapatac2.pp.harmony.html  snapatac2.pp.import_data.html  snapatac2.pp.knn.html  snapatac2.pp.make_gene_matrix.html  snapatac2.pp.make_peak_matrix.html  snapatac2.pp.make_tile_matrix.html  snapatac2.pp.mnc_correct.html  snapatac2.pp.scrublet.html  snapatac2.pp.select_features.html  snapatac2.read.html  snapatac2.read_dataset.html  snapatac2.read_mtx.html  snapatac2.tl.aggregate_X.html  snapatac2.tl.call_peaks.html  snapatac2.tl.dbscan.html  snapatac2.tl.hdbscan.html  snapatac2.tl.kmeans.html  snapatac2.tl.laplacian.html  snapatac2.tl.leiden.html  snapatac2.tl.spectral.html  snapatac2.tl.umap.html
_sources/: changelog.md.txt  index.rst.txt  install.rst.txt
algorithms/: dimension_reduction.html  index.html
api/: datasets.html  index.html  io.html  metrics.html  preprocessing.html  recipes.html  tools.html
bed-utils/: Cargo.toml
bed-utils/examples/: bam_flagstat.rs
bed-utils/src/: bam.rs  bed.rs  lib.rs
bed-utils/src/bed/: io.rs  score.rs  strand.rs  tree.rs
benches/: benchmark.rs
ci/: get_hdf5_win.py
docker/: README.md
docs/: api.rst  changelog.md  conf.py  github_page_redirect.html  index.rst  install.md  install.rst  make.bat
examples/: example_1.py
snapatac2-contrib/: README.md  setup.py
snapatac2-core/: Cargo.toml  LICENSE
snapatac2-core/benches/: benchmark.rs
snapatac2-core/examples/: compute_qc.rs  create_hdf5.rs  make_count_matrix.rs
snapatac2-core/src/: embedding.rs  export.rs  gene_score.rs  genome.rs  knn.rs  lib.rs  matrix.rs  motif.rs  network.rs  peak_matrix.rs  preprocessing.rs  qc.rs  tile_matrix.rs  utils.rs
snapatac2-core/src/feature_count/: counter.rs  coverage.rs  data_iter.rs  matrix.rs  mod.rs
snapatac2-core/src/preprocessing/: bam.rs  barcode.rs  count_data.rs  counter.rs  fragment.rs  genome.rs  import.rs  mark_duplicates.rs  matrix.rs  mod.rs  qc.rs
snapatac2-core/src/preprocessing/bam/: flagstat.rs  header.rs  mark_duplicates.rs
snapatac2-core/src/preprocessing/count_data/: coverage.rs  genome.rs  import.rs  matrix.rs
snapatac2-core/src/utils/: anndata.rs  gene.rs  hdf5.rs  mod.rs  similarity.rs
snapatac2-python/: Cargo.toml  LICENSE  README.md  pyproject.toml  setup.py
snapatac2-python/examples/: matrix.py  qc.py
snapatac2-python/python/snapatac2/: __init__.py  _utils.py  datasets.py  genome.py
snapatac2-python/python/snapatac2/export/: __init__.py
snapatac2-python/python/snapatac2/metrics/: __init__.py
snapatac2-python/python/snapatac2/plotting/: __init__.py
snapatac2-python/python/snapatac2/preprocessing/: __init__.py  _basic.py  _cell_calling.py  _harmony.py  _knn.py  _mnn_correct.py  _recipe.py  _scrublet.py
snapatac2-python/python/snapatac2/tools/: __init__.py  _call_peaks.py  _clustering.py  _diff.py  _embedding.py  _misc.py  _motif.py  _network.py  _smooth.py
snapatac2-python/snapatac2/: __init__.py  _file_specs.py  _io.py  _spectral.py  _utils.py  _version.py  datasets.py  genome.py  utils.py
snapatac2-python/snapatac2.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
snapatac2-python/snapatac2/anndata/: __init__.py
snapatac2-python/snapatac2/cluster/: __init__.py  kmeans.py  leiden.py
snapatac2-python/snapatac2/embedding/: __init__.py  _spectral.py
snapatac2-python/snapatac2/export/: __init__.py
snapatac2-python/snapatac2/metrics/: __init__.py
snapatac2-python/snapatac2/plotting/: __init__.py  _base.py  _diff.py  _embedding.py  _network.py  _qc.py  _scatter.py  _tsse.py  _util.py  _utils.py  test.py
snapatac2-python/snapatac2/preprocessing/: __init__.py  _basic.py  _harmony.py  _knn.py  _mnn_correct.py  _scanorama.py  _scrublet.py
snapatac2-python/snapatac2/tools/: __init__.py  _call_peaks.py  _clustering.py  _counts.py  _dbscan.py  _diff.py  _embedding.py  _hdbscan.py  _integration.py  _kmeans.py  _laplacian.py  _leiden.py  _misc.py  _motif.py  _network.py  _smooth.py  _spectral.py  _umap.py
snapatac2-python/snapatac2/tools/embedding/: __init__.py  _laplacian.py  _spectral.py  _umap.py
snapatac2-python/src/: call_peaks.rs  embedding.rs  export.rs  knn.rs  lib.rs  matrix.rs  motif.rs  network.rs  preprocessing.rs  utils.rs
snapatac2-python/src/utils/: anndata.rs
snapatac2-python/tests/: test.py  test2.py  test_base.py  test_func.py  test_import.py  test_io.py  test_jaccard.py  test_pickle.py  test_pipeline.py  test_similarity.py  test_subset.py  test_tools.py
snapatac2-python/tests/test_tools/: test.bam
src/: lib.rs  main.rs  qc.rs
tsse/: Cargo.toml
tsse/benches/: benchmark.rs
tsse/examples/: compute_qc.rs  create_hdf5.rs  make_count_matrix.rs
tsse/src/: lib.rs  main.rs  qc.rs
tsse/src/utils/: anndata.rs  hdf5.rs  mod.rs  sort.rs
tutorials/: annotation.html  diff.html  hic.html  index.html  integration.html  modality.html  pbmc.html  pbmc.ipynb
(+2349 files in other folders)
