[package]
name = "ProjectA"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

flate2 = "1.0"
bio = { git = "https://github.com/kaizhang/rust-bio.git", rev = "33c6db389c03fff9a5f9571bbb5235957bdda7c8" }
itertools = "0.8"
csv = "1.1.6"
intervaltree = "0.2"