[package]
name = "snapatac2-core"
version = "2.0.1"
edition = "2021"
authors = ["Kai Zhang <zhangkai33@westlake.edu.cn>"]
description = "Rust APIs"
license = "MIT"
repository = "https://github.com/"
homepage = "https://github.com/"
keywords = ["single-cell", "biology"]

[dependencies]
anndata = "0.4.1"
anyhow = "1.0"
bigtools = { version = "0.4", features = ["read", "write"] }
bed-utils = "0.4.1"
flate2 = "1.0"
tokio = "1.34"
hora = "0.1"
kdtree = "0.7"
itertools = "0.12"
indexmap = "2.2"
indicatif = {version = "0.17", features = ["rayon"] }
lexical = "6.1"
log = "0.4"
ndarray = { version = "0.15", features = ["rayon"] }
num = "0.4"
noodles = { version = "0.74", features = ["core", "bam", "sam", "gff", "gtf"] }
nalgebra-sparse = "0.9"
polars = { version = "0.40", features = ["ndarray", "dtype-categorical"] }
rayon = "1.10"
regex = "1.6"
serde = "1.0"
statrs = "0.16"
smallvec = "1.13"
tempfile = "3.3"
zstd = { version = "0.13", features = ["zstdmt"] }
