[package]
name = "snapatac2-core"
version = "2.0.1"
edition = "2021"
authors = ["Kai Zhang <zhangkai33@westlake.edu.cn>"]
description = "Rust APIs"
license = "MIT"
repository = "https://github.com/"
homepage = "https://github.com/"
keywords = ["single-cell", "biology"]

[dependencies]
#anndata = "0.6.1"
anndata = { git = "https://github.com/kaizhang/anndata-rs.git", rev = "0d27ac475634ed7703ab1a23e01e6a3031a28541"}
anyhow = "1.0"
bstr = "1.0"
byteorder = "1.0"
bigtools = { version = "0.5", features = ["read", "write"] }
bed-utils = "0.7.1"
flate2 = "1.0"
tokio = "1.34"
hora = "0.1"
kdtree = "0.7"
itertools = "0.13"
indexmap = "2.6"
indicatif = { version = "0.17", features = ["rayon"] }
lexical = "6.1"
log = "0.4"
ndarray = { version = "0.16", features = ["rayon"] }
num = "0.4"
noodles = { version = "0.84", features = ["core", "fastq", "bam", "sam", "gff", "gtf"] }
nalgebra-sparse = "0.10"
polars = { version = "0.45", features = ["ndarray", "dtype-categorical"] }
rayon = "1.10"
regex = "1.6"
serde = "1.0"
statrs = "0.17"
smallvec = "1.13"
sanitize-filename = "0.5"
tempfile = "3.3"
zstd = { version = "0.13", features = ["zstdmt"] }