[package]
name = "snapatac2"
version = "2.5.4-dev1"
edition = "2021"
authors = ["Kai Zhang <kai@kzhang.org>"]
description = "Rust APIs"
license = "MIT"
readme = "README.md"
repository = "https://github.com/"
homepage = "https://github.com/"
keywords = ["single-cell", "biology"]

[dependencies]
snapatac2-core = { path = "../snapatac2-core" }
#snapatac2-core = { git = "https://github.com/kaizhang/SnapATAC2.git", rev = "ab502b5ed67492d3428fb01b3f4ab7cee6b32566" }
anndata = "0.2"
anndata-hdf5 = "0.1"
pyanndata = "0.2.2"
extsort = "0.4"
anyhow = "1.0"
bed-utils = "0.1"
flate2 = "1.0"
itertools = "0.11"
indicatif = "0.17"
linreg = "0.2"
log = "0.4"
linfa = "0.6"
linfa-clustering = "0.6"
noodles = { version = "0.60", features = ["bam", "sam"] }
numpy = "0.20.0"
nalgebra-sparse = "0.9"
nalgebra = "0.32"
ndarray = "0.15"
polars = { version = "0.35", features = ["ndarray", "dtype-categorical"] }
pyo3-log = "0.9"
rand_isaac = "0.3"
rand_core = "0.6"
rand = "0.8"
rayon = "1.8"
statrs = "0.16"
tempfile = "3.3"
zstd = { version = "0.13", features = ["zstdmt"] }

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = {version = "0.5", features = ["disable_initial_exec_tls"]}

[dependencies.pyo3]
version = "0.20.2"
features = ["extension-module", "anyhow"]

[lib]
name = "snapatac2"
crate-type = ["cdylib"]