[package]
name = "project_a"
version = "0.1.0"
edition = "2021"
authors = ["Kai Zhang <kai@kzhang.org>"]
description = "Rust APIs"
license = "MIT"
readme = "README.md"
repository = "https://github.com/"
homepage = "https://github.com/"
keywords = ["single-cell", "biology"]

[dependencies]
flate2 = "1.0"
itertools = "0.8"
bed-utils = { path = "../bed-utils" }
hdf5 = "0.8.1"
ndarray = "0.15.4"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "benchmark"
harness = false
